--- a/SimpleCameraSetting.csproj
+++ b/SimpleCameraSetting.csproj
@@ -46,8 +46,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CameraConfigPatch.cs" />
+    <Compile Include="CameraPanSpeedPatch.cs" />
     <Compile Include="ModSetting.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Refs.cs" />
     <Compile Include="SilhouetteUtilityPatch.cs" />
     <Compile Include="SimpleCameraSetting.cs" />
   </ItemGroup>
