--- a/SimpleCameraSetting.csproj
+++ b/SimpleCameraSetting.csproj
@@ -49,7 +49,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CameraConfigPatch.cs" />
-    <Compile Include="CameraPanSpeedPatch.cs" />
+    <Compile Include="CameraDriverOnGUIPatch.cs" />
+    <Compile Include="CameraMapConfigUpdatePatch.cs" />
+    <Compile Include="DrawSelectionBracketForPatch.cs" />
     <Compile Include="ModSetting.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Refs.cs" />
